[bug 1058738] Fix z-index on product picker

--- a/kitsune/sumo/static/less/main.less
+++ b/kitsune/sumo/static/less/main.less
@@ -1676,7 +1676,7 @@ input[type=button],
 .product-picker-dd {
   margin: 24px 0 0 0;
   position: relative;
-  z-index: 10;
+  z-index: 8;
 
   > ul {
     background: #fff;
